--- a/src/styles/colors.css
+++ b/src/styles/colors.css
@@ -1,4 +1,5 @@
-:root {
+/* Light mode */
+.dark .invert-theme, .dark-theme .invert-theme, :host, :root {
   --ds-gray-100-value: 0, 0%, 95%;
   --ds-gray-200-value: 0, 0%, 92%;
   --ds-gray-300-value: 0, 0%, 90%;
@@ -97,7 +98,48 @@
   --vaul-overlay-background: 255, 255, 255;
   --vaul-overlay-background-start: transparent;
   --vaul-overlay-background-end: rgba(0, 0, 0, .4);
+}
 
+.dark .invert-theme, .dark-theme .invert-theme, .geist-disabled .geist-disabled-skip, :host, :root {
+  --geist-success-lighter: #d3e5ff;
+  --geist-success-light: #3291ff;
+  --geist-success: #0070f3;
+  --geist-success-dark: #0761d1;
+  --geist-error-lighter: #f7d4d6;
+  --geist-error-light: #ff1a1a;
+  --geist-error: #e00;
+  --geist-error-dark: #c50000;
+  --geist-warning-lighter: #ffefcf;
+  --geist-warning-light: #f7b955;
+  --geist-warning: #f5a623;
+  --geist-warning-dark: #ab570a;
+  --geist-violet-lighter: #d8ccf1;
+  --geist-violet-light: #8a63d2;
+  --geist-violet: #7928ca;
+  --geist-violet-dark: #4c2889;
+  --geist-violet-background: #fff;
+  --geist-violet-background-secondary: #291c3a;
+  --geist-violet-background-tertiary: #eae5f4;
+  --geist-background-rgb: 255, 255, 255;
+  --geist-foreground-rgb: 0, 0, 0;
+  --geist-console-header: #efe7ed;
+  --geist-console-purple: #7928ca;
+  --geist-console-text-color-default: var(--geist-foreground);
+  --geist-console-text-color-blue: #0070f3;
+  --geist-console-text-color-pink: #eb367f;
+  --geist-console-text-color-purple: #7928ca;
+  --geist-cyan-lighter: #aaffec;
+  --geist-cyan-light: #79ffe1;
+  --geist-cyan: #50e3c2;
+  --geist-cyan-dark: #29bc9b;
+  --geist-highlight-purple: #f81ce5;
+  --geist-highlight-magenta: #eb367f;
+  --geist-highlight-pink: #ff0080;
+  --geist-highlight-yellow: #fff500;
+  --geist-foreground: #000;
+  --geist-background: #fff;
+  --geist-selection: var(--ds-blue-800);
+  --geist-selection-text-color: #fff;
   --accents-1: #fafafa;
   --accents-2: #eaeaea;
   --accents-3: #999;
@@ -106,9 +148,205 @@
   --accents-6: #444;
   --accents-7: #333;
   --accents-8: #111;
+  --geist-link-color: var(--ds-blue-700);
+  --geist-marketing-gray: #fafbfc;
+  --geist-code: var(--geist-foreground);
+  --geist-secondary-lighter: var(--accents-2);
+  --geist-secondary-light: var(--accents-3);
+  --geist-secondary: var(--accents-5);
+  --geist-secondary-dark: var(--accents-7);
+  --dropdown-box-shadow: 0 4px 4px 0 rgba(0, 0, 0, .02);
+  --dropdown-triangle-stroke: #fff;
+  --scroller-start: #fff;
+  --scroller-end: hsla(0, 0%, 100%, 0);
+  --shadow-smallest: 0px 2px 4px rgba(0, 0, 0, .1);
+  --shadow-extra-small: 0px 4px 8px rgba(0, 0, 0, .12);
+  --shadow-small: 0 5px 10px rgba(0, 0, 0, .12);
+  --shadow-medium: 0 8px 30px rgba(0, 0, 0, .12);
+  --shadow-large: 0 30px 60px rgba(0, 0, 0, .12);
+  --shadow-hover: 0 30px 60px rgba(0, 0, 0, .12);
+  --shadow-sticky: 0 12px 10px -10px rgba(0, 0, 0, .12);
+  --portal-opacity: 0.25;
+  --wv-green: #0cce6b;
+  --wv-orange: #ffa400;
+  --wv-red: #ff4e42;
+  --develop-start-gradient: #007cf0;
+  --develop-end-gradient: #00dfd8;
+  --develop-line-end: #019ae9;
+  --develop-text: #0a72ef;
+  --preview-start-gradient: #7928ca;
+  --preview-end-gradient: #ff0080;
+  --preview-line-end: #9a1fb8;
+  --preview-text: #de1d8d;
+  --ship-start-gradient: #ff4d4d;
+  --ship-end-gradient: #f9cb28;
+  --ship-line-end: #f9cb28;
+  --ship-text: #ff5b4f;
+  --next-icon-border: #000;
 }
 
-:root {
+/* Dark mode */
+.dark, .dark-theme, .invert-theme {
+  --ds-gray-100-value: 0, 0%, 10%;
+  --ds-gray-200-value: 0, 0%, 12%;
+  --ds-gray-300-value: 0, 0%, 16%;
+  --ds-gray-400-value: 0, 0%, 18%;
+  --ds-gray-500-value: 0, 0%, 27%;
+  --ds-gray-600-value: 0, 0%, 53%;
+  --ds-gray-700-value: 0, 0%, 56%;
+  --ds-gray-800-value: 0, 0%, 49%;
+  --ds-gray-900-value: 0, 0%, 63%;
+  --ds-gray-1000-value: 0, 0%, 93%;
+  --ds-blue-100-value: 216, 50%, 12%;
+  --ds-blue-200-value: 214, 59%, 15%;
+  --ds-blue-300-value: 213, 71%, 20%;
+  --ds-blue-400-value: 212, 78%, 23%;
+  --ds-blue-500-value: 211, 86%, 27%;
+  --ds-blue-600-value: 206, 100%, 50%;
+  --ds-blue-700-value: 212, 100%, 48%;
+  --ds-blue-800-value: 212, 100%, 41%;
+  --ds-blue-900-value: 210, 100%, 66%;
+  --ds-blue-1000-value: 206, 100%, 96%;
+  --ds-red-100-value: 357, 37%, 12%;
+  --ds-red-200-value: 357, 46%, 16%;
+  --ds-red-300-value: 356, 54%, 22%;
+  --ds-red-400-value: 357, 55%, 26%;
+  --ds-red-500-value: 357, 60%, 32%;
+  --ds-red-600-value: 358, 75%, 59%;
+  --ds-red-700-value: 358, 75%, 59%;
+  --ds-red-800-value: 358, 69%, 52%;
+  --ds-red-900-value: 358, 100%, 69%;
+  --ds-red-1000-value: 353, 90%, 96%;
+  --ds-amber-100-value: 35, 100%, 8%;
+  --ds-amber-200-value: 32, 100%, 10%;
+  --ds-amber-300-value: 33, 100%, 15%;
+  --ds-amber-400-value: 35, 100%, 17%;
+  --ds-amber-500-value: 35, 91%, 22%;
+  --ds-amber-600-value: 39, 85%, 49%;
+  --ds-amber-700-value: 39, 100%, 57%;
+  --ds-amber-800-value: 35, 100%, 52%;
+  --ds-amber-900-value: 39, 90%, 50%;
+  --ds-amber-1000-value: 40, 94%, 93%;
+  --ds-green-100-value: 136, 50%, 9%;
+  --ds-green-200-value: 137, 50%, 12%;
+  --ds-green-300-value: 136, 50%, 14%;
+  --ds-green-400-value: 135, 70%, 16%;
+  --ds-green-500-value: 135, 70%, 23%;
+  --ds-green-600-value: 135, 70%, 34%;
+  --ds-green-700-value: 131, 41%, 46%;
+  --ds-green-800-value: 132, 43%, 39%;
+  --ds-green-900-value: 131, 43%, 57%;
+  --ds-green-1000-value: 136, 73%, 94%;
+  --ds-teal-100-value: 169, 78%, 7%;
+  --ds-teal-200-value: 170, 74%, 9%;
+  --ds-teal-300-value: 171, 75%, 13%;
+  --ds-teal-400-value: 171, 85%, 13%;
+  --ds-teal-500-value: 172, 85%, 20%;
+  --ds-teal-600-value: 172, 85%, 32%;
+  --ds-teal-700-value: 173, 80%, 36%;
+  --ds-teal-800-value: 173, 83%, 30%;
+  --ds-teal-900-value: 174, 90%, 41%;
+  --ds-teal-1000-value: 166, 71%, 93%;
+  --ds-purple-100-value: 283, 30%, 12%;
+  --ds-purple-200-value: 281, 38%, 16%;
+  --ds-purple-300-value: 279, 44%, 23%;
+  --ds-purple-400-value: 277, 46%, 28%;
+  --ds-purple-500-value: 274, 49%, 35%;
+  --ds-purple-600-value: 272, 51%, 54%;
+  --ds-purple-700-value: 272, 51%, 54%;
+  --ds-purple-800-value: 272, 47%, 45%;
+  --ds-purple-900-value: 275, 80%, 71%;
+  --ds-purple-1000-value: 281, 73%, 96%;
+  --ds-pink-100-value: 335, 32%, 12%;
+  --ds-pink-200-value: 335, 43%, 16%;
+  --ds-pink-300-value: 335, 47%, 21%;
+  --ds-pink-400-value: 335, 51%, 22%;
+  --ds-pink-500-value: 335, 57%, 27%;
+  --ds-pink-600-value: 336, 75%, 40%;
+  --ds-pink-700-value: 336, 80%, 58%;
+  --ds-pink-800-value: 336, 74%, 51%;
+  --ds-pink-900-value: 341, 90%, 67%;
+  --ds-pink-1000-value: 333, 90%, 96%;
+  --ds-gray-alpha-100: hsla(0, 0%, 100%, .06);
+  --ds-gray-alpha-200: hsla(0, 0%, 100%, .09);
+  --ds-gray-alpha-300: hsla(0, 0%, 100%, .13);
+  --ds-gray-alpha-400: hsla(0, 0%, 100%, .14);
+  --ds-gray-alpha-500: hsla(0, 0%, 100%, .24);
+  --ds-gray-alpha-600: hsla(0, 0%, 100%, .51);
+  --ds-gray-alpha-700: hsla(0, 0%, 100%, .54);
+  --ds-gray-alpha-800: hsla(0, 0%, 100%, .47);
+  --ds-gray-alpha-900: hsla(0, 0%, 100%, .61);
+  --ds-gray-alpha-1000: hsla(0, 0%, 100%, .92);
+  --ds-background-100: #0a0a0a;
+  --ds-background-200: #000;
+  --ds-focus-border: 0 0 0 1px var(--ds-gray-alpha-600), 0px 0px 0px 4px hsla(0, 0%, 100%, .24);
+  --ds-focus-color: var(--ds-blue-900);
+  --ds-shadow-border-inset: inset 0 0 0 1px hsla(0, 0%, 100%, .1);
+}
+
+.dark, .dark-theme, .dark-theme .geist-disabled .geist-disabled-skip, .invert-theme {
+  --geist-foreground: #fff;
+  --geist-background: #000;
+  --accents-8: #fafafa;
+  --accents-7: #eaeaea;
+  --accents-6: #999;
+  --accents-5: #888;
+  --accents-4: #666;
+  --accents-3: #444;
+  --accents-2: #333;
+  --accents-1: #111;
+  --geist-secondary-lighter: var(--accents-2);
+  --geist-secondary-light: var(--accents-3);
+  --geist-secondary: var(--accents-5);
+  --geist-secondary-dark: var(--accents-7);
+  --geist-link-color: var(--ds-blue-900);
+  --geist-marketing-gray: var(--accents-1);
+  --geist-code: var(--geist-foreground);
+  --geist-error-light: #f33;
+  --geist-error: red;
+  --geist-error-dark: #e60000;
+  --geist-text-gradient: linear-gradient(180deg, #fff, hsla(0, 0%, 100%, .75));
+  --dropdown-box-shadow: 0 0 0 1px var(--accents-2);
+  --dropdown-triangle-stroke: #333;
+  --scroller-start: #000;
+  --scroller-end: transparent;
+  --header-border-bottom: 0 1px 0 0 hsla(0, 0%, 100%, .1);
+  --header-import-flow-background: hsla(0, 0%, 7%, .8);
+  --shadow-smallest: 0 0 0 1px var(--accents-2);
+  --shadow-extra-small: 0 0 0 1px var(--accents-2);
+  --shadow-small: 0 0 0 1px var(--accents-2);
+  --shadow-medium: 0 0 0 1px var(--accents-2);
+  --shadow-large: 0 0 0 1px var(--accents-2);
+  --shadow-sticky: 0 0 0 1px var(--accents-2);
+  --shadow-hover: 0 0 0 1px var(--geist-foreground);
+  --portal-opacity: 0.75;
+  --geist-violet-background: #291d3a;
+  --geist-violet-background-secondary: #211830;
+  --geist-violet-background-tertiary: #211830;
+  --geist-background-rgb: 0, 0, 0;
+  --geist-foreground-rgb: 255, 255, 255;
+  --geist-console-header: #0f0310;
+  --geist-console-purple: #8a63d2;
+  --geist-console-text-color-default: var(--geist-foreground);
+  --geist-console-text-color-blue: #3291ff;
+  --geist-console-text-color-pink: #eb367f;
+  --next-icon-border: #fff;
+  --ds-shadow-border: 0 0 0 1px hsla(0, 0%, 100%, .145);
+  --ds-shadow-small: 0px 1px 2px rgba(0, 0, 0, .16);
+  --ds-shadow-border-small: var(--ds-shadow-border), 0px 1px 2px rgba(0, 0, 0, .16);
+  --ds-shadow-medium: 0px 2px 2px rgba(0, 0, 0, .32), 0px 8px 8px -8px rgba(0, 0, 0, .16);
+  --ds-shadow-border-medium: var(--ds-shadow-border), 0px 2px 2px rgba(0, 0, 0, .32), 0px 8px 8px -8px rgba(0, 0, 0, .16);
+  --ds-shadow-large: 0px 2px 2px rgba(0, 0, 0, .04), 0px 8px 16px -4px rgba(0, 0, 0, .04);
+  --ds-shadow-border-large: var(--ds-shadow-border), 0px 2px 2px rgba(0, 0, 0, .04), 0px 8px 16px -4px rgba(0, 0, 0, .04);
+  --ds-shadow-tooltip: var(--ds-shadow-border), 0px 1px 1px rgba(0, 0, 0, .02), 0px 4px 8px rgba(0, 0, 0, .04);
+  --ds-shadow-menu: var(--ds-shadow-border), 0px 1px 1px rgba(0, 0, 0, .02), 0px 4px 8px -4px rgba(0, 0, 0, .04), 0px 16px 24px -8px rgba(0, 0, 0, .06);
+  --ds-shadow-modal: var(--ds-shadow-border), 0px 1px 1px rgba(0, 0, 0, .02), 0px 8px 16px -4px rgba(0, 0, 0, .04), 0px 24px 32px -8px rgba(0, 0, 0, .06);
+  --ds-shadow-fullscreen: var(--ds-shadow-border), 0px 1px 1px rgba(0, 0, 0, .02), 0px 8px 16px -4px rgba(0, 0, 0, .04), 0px 24px 32px -8px rgba(0, 0, 0, .06);
+  --ds-focus-ring: 0 0 0 2px var(--ds-background-100), 0 0 0 4px var(--ds-focus-color);
+}
+
+/* Color mode Dark/Light */
+.dark, .dark-theme, .invert-theme, :host, :root {
   --ds-gray-100: hsla(var(--ds-gray-100-value), 1);
   --ds-gray-200: hsla(var(--ds-gray-200-value), 1);
   --ds-gray-300: hsla(var(--ds-gray-300-value), 1);
@@ -191,188 +429,7 @@
   --ds-pink-1000: hsla(var(--ds-pink-1000-value), 1);
 }
 
-@media (prefers-color-scheme: dark) {
-  :root {
-    --ds-gray-100-value: 0, 0%, 10%;
-    --ds-gray-200-value: 0, 0%, 12%;
-    --ds-gray-300-value: 0, 0%, 16%;
-    --ds-gray-400-value: 0, 0%, 18%;
-    --ds-gray-500-value: 0, 0%, 27%;
-    --ds-gray-600-value: 0, 0%, 53%;
-    --ds-gray-700-value: 0, 0%, 56%;
-    --ds-gray-800-value: 0, 0%, 49%;
-    --ds-gray-900-value: 0, 0%, 63%;
-    --ds-gray-1000-value: 0, 0%, 93%;
-    --ds-blue-100-value: 216, 50%, 12%;
-    --ds-blue-200-value: 214, 59%, 15%;
-    --ds-blue-300-value: 213, 71%, 20%;
-    --ds-blue-400-value: 212, 78%, 23%;
-    --ds-blue-500-value: 211, 86%, 27%;
-    --ds-blue-600-value: 206, 100%, 50%;
-    --ds-blue-700-value: 212, 100%, 48%;
-    --ds-blue-800-value: 212, 100%, 41%;
-    --ds-blue-900-value: 210, 100%, 66%;
-    --ds-blue-1000-value: 206, 100%, 96%;
-    --ds-red-100-value: 357, 37%, 12%;
-    --ds-red-200-value: 357, 46%, 16%;
-    --ds-red-300-value: 356, 54%, 22%;
-    --ds-red-400-value: 357, 55%, 26%;
-    --ds-red-500-value: 357, 60%, 32%;
-    --ds-red-600-value: 358, 75%, 59%;
-    --ds-red-700-value: 358, 75%, 59%;
-    --ds-red-800-value: 358, 69%, 52%;
-    --ds-red-900-value: 358, 100%, 69%;
-    --ds-red-1000-value: 353, 90%, 96%;
-    --ds-amber-100-value: 35, 100%, 8%;
-    --ds-amber-200-value: 32, 100%, 10%;
-    --ds-amber-300-value: 33, 100%, 15%;
-    --ds-amber-400-value: 35, 100%, 17%;
-    --ds-amber-500-value: 35, 91%, 22%;
-    --ds-amber-600-value: 39, 85%, 49%;
-    --ds-amber-700-value: 39, 100%, 57%;
-    --ds-amber-800-value: 35, 100%, 52%;
-    --ds-amber-900-value: 39, 90%, 50%;
-    --ds-amber-1000-value: 40, 94%, 93%;
-    --ds-green-100-value: 136, 50%, 9%;
-    --ds-green-200-value: 137, 50%, 12%;
-    --ds-green-300-value: 136, 50%, 14%;
-    --ds-green-400-value: 135, 70%, 16%;
-    --ds-green-500-value: 135, 70%, 23%;
-    --ds-green-600-value: 135, 70%, 34%;
-    --ds-green-700-value: 131, 41%, 46%;
-    --ds-green-800-value: 132, 43%, 39%;
-    --ds-green-900-value: 131, 43%, 57%;
-    --ds-green-1000-value: 136, 73%, 94%;
-    --ds-teal-100-value: 169, 78%, 7%;
-    --ds-teal-200-value: 170, 74%, 9%;
-    --ds-teal-300-value: 171, 75%, 13%;
-    --ds-teal-400-value: 171, 85%, 13%;
-    --ds-teal-500-value: 172, 85%, 20%;
-    --ds-teal-600-value: 172, 85%, 32%;
-    --ds-teal-700-value: 173, 80%, 36%;
-    --ds-teal-800-value: 173, 83%, 30%;
-    --ds-teal-900-value: 174, 90%, 41%;
-    --ds-teal-1000-value: 166, 71%, 93%;
-    --ds-purple-100-value: 283, 30%, 12%;
-    --ds-purple-200-value: 281, 38%, 16%;
-    --ds-purple-300-value: 279, 44%, 23%;
-    --ds-purple-400-value: 277, 46%, 28%;
-    --ds-purple-500-value: 274, 49%, 35%;
-    --ds-purple-600-value: 272, 51%, 54%;
-    --ds-purple-700-value: 272, 51%, 54%;
-    --ds-purple-800-value: 272, 47%, 45%;
-    --ds-purple-900-value: 275, 80%, 71%;
-    --ds-purple-1000-value: 281, 73%, 96%;
-    --ds-pink-100-value: 335, 32%, 12%;
-    --ds-pink-200-value: 335, 43%, 16%;
-    --ds-pink-300-value: 335, 47%, 21%;
-    --ds-pink-400-value: 335, 51%, 22%;
-    --ds-pink-500-value: 335, 57%, 27%;
-    --ds-pink-600-value: 336, 75%, 40%;
-    --ds-pink-700-value: 336, 80%, 58%;
-    --ds-pink-800-value: 336, 74%, 51%;
-    --ds-pink-900-value: 341, 90%, 67%;
-    --ds-pink-1000-value: 333, 90%, 96%;
-    --ds-gray-alpha-100: hsla(0, 0%, 100%, .06);
-    --ds-gray-alpha-200: hsla(0, 0%, 100%, .09);
-    --ds-gray-alpha-300: hsla(0, 0%, 100%, .13);
-    --ds-gray-alpha-400: hsla(0, 0%, 100%, .14);
-    --ds-gray-alpha-500: hsla(0, 0%, 100%, .24);
-    --ds-gray-alpha-600: hsla(0, 0%, 100%, .51);
-    --ds-gray-alpha-700: hsla(0, 0%, 100%, .54);
-    --ds-gray-alpha-800: hsla(0, 0%, 100%, .47);
-    --ds-gray-alpha-900: hsla(0, 0%, 100%, .61);
-    --ds-gray-alpha-1000: hsla(0, 0%, 100%, .92);
-    --ds-background-100: #0a0a0a;
-    --ds-background-200: #000;
-    --ds-focus-border: 0 0 0 1px var(--ds-gray-alpha-600), 0px 0px 0px 4px hsla(0, 0%, 100%, .24);
-    --ds-focus-color: var(--ds-blue-900);
-    --ds-shadow-border-inset: inset 0 0 0 1px hsla(0, 0%, 100%, .1);
-  }
 
-  :root {
-    --ds-gray-100: hsla(var(--ds-gray-100-value), 1);
-    --ds-gray-200: hsla(var(--ds-gray-200-value), 1);
-    --ds-gray-300: hsla(var(--ds-gray-300-value), 1);
-    --ds-gray-400: hsla(var(--ds-gray-400-value), 1);
-    --ds-gray-500: hsla(var(--ds-gray-500-value), 1);
-    --ds-gray-600: hsla(var(--ds-gray-600-value), 1);
-    --ds-gray-700: hsla(var(--ds-gray-700-value), 1);
-    --ds-gray-800: hsla(var(--ds-gray-800-value), 1);
-    --ds-gray-900: hsla(var(--ds-gray-900-value), 1);
-    --ds-gray-1000: hsla(var(--ds-gray-1000-value), 1);
-    --ds-blue-100: hsla(var(--ds-blue-100-value), 1);
-    --ds-blue-200: hsla(var(--ds-blue-200-value), 1);
-    --ds-blue-300: hsla(var(--ds-blue-300-value), 1);
-    --ds-blue-400: hsla(var(--ds-blue-400-value), 1);
-    --ds-blue-500: hsla(var(--ds-blue-500-value), 1);
-    --ds-blue-600: hsla(var(--ds-blue-600-value), 1);
-    --ds-blue-700: hsla(var(--ds-blue-700-value), 1);
-    --ds-blue-800: hsla(var(--ds-blue-800-value), 1);
-    --ds-blue-900: hsla(var(--ds-blue-900-value), 1);
-    --ds-blue-1000: hsla(var(--ds-blue-1000-value), 1);
-    --ds-amber-100: hsla(var(--ds-amber-100-value), 1);
-    --ds-amber-200: hsla(var(--ds-amber-200-value), 1);
-    --ds-amber-300: hsla(var(--ds-amber-300-value), 1);
-    --ds-amber-400: hsla(var(--ds-amber-400-value), 1);
-    --ds-amber-500: hsla(var(--ds-amber-500-value), 1);
-    --ds-amber-600: hsla(var(--ds-amber-600-value), 1);
-    --ds-amber-700: hsla(var(--ds-amber-700-value), 1);
-    --ds-amber-800: hsla(var(--ds-amber-800-value), 1);
-    --ds-amber-900: hsla(var(--ds-amber-900-value), 1);
-    --ds-amber-1000: hsla(var(--ds-amber-1000-value), 1);
-    --ds-red-100: hsla(var(--ds-red-100-value), 1);
-    --ds-red-200: hsla(var(--ds-red-200-value), 1);
-    --ds-red-300: hsla(var(--ds-red-300-value), 1);
-    --ds-red-400: hsla(var(--ds-red-400-value), 1);
-    --ds-red-500: hsla(var(--ds-red-500-value), 1);
-    --ds-red-600: hsla(var(--ds-red-600-value), 1);
-    --ds-red-700: hsla(var(--ds-red-700-value), 1);
-    --ds-red-800: hsla(var(--ds-red-800-value), 1);
-    --ds-red-900: hsla(var(--ds-red-900-value), 1);
-    --ds-red-1000: hsla(var(--ds-red-1000-value), 1);
-    --ds-green-100: hsla(var(--ds-green-100-value), 1);
-    --ds-green-200: hsla(var(--ds-green-200-value), 1);
-    --ds-green-300: hsla(var(--ds-green-300-value), 1);
-    --ds-green-400: hsla(var(--ds-green-400-value), 1);
-    --ds-green-500: hsla(var(--ds-green-500-value), 1);
-    --ds-green-600: hsla(var(--ds-green-600-value), 1);
-    --ds-green-700: hsla(var(--ds-green-700-value), 1);
-    --ds-green-800: hsla(var(--ds-green-800-value), 1);
-    --ds-green-900: hsla(var(--ds-green-900-value), 1);
-    --ds-green-1000: hsla(var(--ds-green-1000-value), 1);
-    --ds-teal-100: hsla(var(--ds-teal-100-value), 1);
-    --ds-teal-200: hsla(var(--ds-teal-200-value), 1);
-    --ds-teal-300: hsla(var(--ds-teal-300-value), 1);
-    --ds-teal-400: hsla(var(--ds-teal-400-value), 1);
-    --ds-teal-500: hsla(var(--ds-teal-500-value), 1);
-    --ds-teal-600: hsla(var(--ds-teal-600-value), 1);
-    --ds-teal-700: hsla(var(--ds-teal-700-value), 1);
-    --ds-teal-800: hsla(var(--ds-teal-800-value), 1);
-    --ds-teal-900: hsla(var(--ds-teal-900-value), 1);
-    --ds-teal-1000: hsla(var(--ds-teal-1000-value), 1);
-    --ds-purple-100: hsla(var(--ds-purple-100-value), 1);
-    --ds-purple-200: hsla(var(--ds-purple-200-value), 1);
-    --ds-purple-300: hsla(var(--ds-purple-300-value), 1);
-    --ds-purple-400: hsla(var(--ds-purple-400-value), 1);
-    --ds-purple-500: hsla(var(--ds-purple-500-value), 1);
-    --ds-purple-600: hsla(var(--ds-purple-600-value), 1);
-    --ds-purple-700: hsla(var(--ds-purple-700-value), 1);
-    --ds-purple-800: hsla(var(--ds-purple-800-value), 1);
-    --ds-purple-900: hsla(var(--ds-purple-900-value), 1);
-    --ds-purple-1000: hsla(var(--ds-purple-1000-value), 1);
-    --ds-pink-100: hsla(var(--ds-pink-100-value), 1);
-    --ds-pink-200: hsla(var(--ds-pink-200-value), 1);
-    --ds-pink-300: hsla(var(--ds-pink-300-value), 1);
-    --ds-pink-400: hsla(var(--ds-pink-400-value), 1);
-    --ds-pink-500: hsla(var(--ds-pink-500-value), 1);
-    --ds-pink-600: hsla(var(--ds-pink-600-value), 1);
-    --ds-pink-700: hsla(var(--ds-pink-700-value), 1);
-    --ds-pink-800: hsla(var(--ds-pink-800-value), 1);
-    --ds-pink-900: hsla(var(--ds-pink-900-value), 1);
-    --ds-pink-1000: hsla(var(--ds-pink-1000-value), 1);
-  }
-}
 
 .gray-100 {
   color: var(--ds-gray-100);
