--- a/src/components/ui/Stack/Stack.module.css
+++ b/src/components/ui/Stack/Stack.module.css
@@ -7,993 +7,52 @@
   gap: var(--stack-gap, 0);
 }
 
-.padding > * {
+.padding {
   padding: var(--stack-padding, 0);
 }
 
-.direction-column {
-  --stack-direction: column;
-}
-.direction-column-reverse {
-  --stack-direction: column-reverse;
-}
-.direction-row {
-  --stack-direction: row;
-}
-.direction-row-reverse {
-  --stack-direction: row-reverse;
-}
-
-.align-start {
-  --stack-align: flex-start;
-}
-.align-end {
-  --stack-align: flex-end;
-}
-.align-center {
-  --stack-align: center;
-}
-.align-baseline {
-  --stack-align: baseline;
-}
-.align-stretch {
-  --stack-align: stretch;
-}
-
-.justify-normal {
-  --stack-justify: normal;
-}
-.justify-start {
-  --stack-justify: flex-start;
-}
-.justify-end {
-  --stack-justify: flex-end;
-}
-.justify-center {
-  --stack-justify: center;
-}
-.justify-between {
-  --stack-justify: space-between;
-}
-.justify-around {
-  --stack-justify: space-around;
-}
-.justify-evenly {
-  --stack-justify: space-evenly;
-}
-.justify-stretch {
-  --stack-justify: stretch;
-}
-
-.flex-initial {
-  --stack-flex: initial;
-}
-.flex-1 {
-  --stack-flex: 1 1 0%;
-}
-.flex-auto {
-  --stack-flex: 1 1 auto;
-}
-.flex-none {
-  --stack-flex: none;
-}
-
-.gap-0 {
-  --stack-gap: 0;
-}
-.gap-1 {
-  --stack-gap: 0.25rem;
-}
-.gap-2 {
-  --stack-gap: 0.5rem;
-}
-.gap-3 {
-  --stack-gap: 0.75rem;
-}
-.gap-4 {
-  --stack-gap: 1rem;
-}
-.gap-5 {
-  --stack-gap: 1.25rem;
-}
-.gap-6 {
-  --stack-gap: 1.5rem;
-}
-.gap-7 {
-  --stack-gap: 1.75rem;
-}
-.gap-8 {
-  --stack-gap: 2rem;
-}
-.gap-9 {
-  --stack-gap: 2.25rem;
-}
-.gap-10 {
-  --stack-gap: 2.5rem;
-}
-.gap-11 {
-  --stack-gap: 2.75rem;
-}
-.gap-12 {
-  --stack-gap: 3rem;
-}
-.gap-13 {
-  --stack-gap: 3.25rem;
-}
-.gap-14 {
-  --stack-gap: 3.5rem;
-}
-.gap-15 {
-  --stack-gap: 3.75rem;
-}
-.gap-16 {
-  --stack-gap: 4rem;
-}
-.gap-17 {
-  --stack-gap: 4.25rem;
-}
-.gap-18 {
-  --stack-gap: 4.5rem;
-}
-.gap-19 {
-  --stack-gap: 4.75rem;
-}
-.gap-20 {
-  --stack-gap: 5rem;
-}
-
-.padding-0 {
-  --stack-padding: 0;
-}
-.padding-1 {
-  --stack-padding: 0.25rem;
-}
-.padding-2 {
-  --stack-padding: 0.5rem;
-}
-.padding-3 {
-  --stack-padding: 0.75rem;
-}
-.padding-4 {
-  --stack-padding: 1rem;
-}
-.padding-5 {
-  --stack-padding: 1.25rem;
-}
-.padding-6 {
-  --stack-padding: 1.5rem;
-}
-.padding-7 {
-  --stack-padding: 1.75rem;
-}
-.padding-8 {
-  --stack-padding: 2rem;
-}
-.padding-9 {
-  --stack-padding: 2.25rem;
-}
-.padding-10 {
-  --stack-padding: 2.5rem;
-}
-.padding-11 {
-  --stack-padding: 2.75rem;
-}
-.padding-12 {
-  --stack-padding: 3rem;
-}
-.padding-13 {
-  --stack-padding: 3.25rem;
-}
-.padding-14 {
-  --stack-padding: 3.5rem;
-}
-.padding-15 {
-  --stack-padding: 3.75rem;
-}
-.padding-16 {
-  --stack-padding: 4rem;
-}
-.padding-17 {
-  --stack-padding: 4.25rem;
-}
-.padding-18 {
-  --stack-padding: 4.5rem;
-}
-.padding-19 {
-  --stack-padding: 4.75rem;
-}
-.padding-20 {
-  --stack-padding: 5rem;
-}
-
-/* small */
-@media screen and (max-width: 600px) {
-  .direction-sm-column {
-    --stack-direction: column;
-  }
-  .direction-sm-column-reverse {
-    --stack-direction: column-reverse;
-  }
-  .direction-sm-row {
-    --stack-direction: row;
-  }
-  .direction-sm-row-reverse {
-    --stack-direction: row-reverse;
-  }
-  
-  .align-sm-start {
-    --stack-align: flex-start;
-  }
-  .align-sm-end {
-    --stack-align: flex-end;
-  }
-  .align-sm-center {
-    --stack-align: center;
-  }
-  .align-sm-baseline {
-    --stack-align: baseline;
-  }
-  .align-sm-stretch {
-    --stack-align: stretch;
-  }
-  
-  .justify-sm-normal {
-    --stack-justify: normal;
-  }
-  .justify-sm-start {
-    --stack-justify: flex-start;
-  }
-  .justify-sm-end {
-    --stack-justify: flex-end;
-  }
-  .justify-sm-center {
-    --stack-justify: center;
-  }
-  .justify-sm-between {
-    --stack-justify: space-between;
-  }
-  .justify-sm-around {
-    --stack-justify: space-around;
-  }
-  .justify-sm-evenly {
-    --stack-justify: space-evenly;
-  }
-  .justify-sm-stretch {
-    --stack-justify: stretch;
-  }
-  
-  .flex-sm-initial {
-    --stack-flex: initial;
-  }
-  .flex-sm-1 {
-    --stack-flex: 1 1 0%;
-  }
-  .flex-sm-auto {
-    --stack-flex: 1 1 auto;
-  }
-  .flex-sm-none {
-    --stack-flex: none;
-  }
-  
-  .gap-sm-0 {
-    --stack-gap: 0;
-  }
-  .gap-sm-1 {
-    --stack-gap: 0.25rem;
-  }
-  .gap-sm-2 {
-    --stack-gap: 0.5rem;
-  }
-  .gap-sm-3 {
-    --stack-gap: 0.75rem;
-  }
-  .gap-sm-4 {
-    --stack-gap: 1rem;
-  }
-  .gap-sm-5 {
-    --stack-gap: 1.25rem;
-  }
-  .gap-sm-6 {
-    --stack-gap: 1.5rem;
-  }
-  .gap-sm-7 {
-    --stack-gap: 1.75rem;
-  }
-  .gap-sm-8 {
-    --stack-gap: 2rem;
-  }
-  .gap-sm-9 {
-    --stack-gap: 2.25rem;
-  }
-  .gap-sm-10 {
-    --stack-gap: 2.5rem;
-  }
-  .gap-sm-11 {
-    --stack-gap: 2.75rem;
-  }
-  .gap-sm-12 {
-    --stack-gap: 3rem;
-  }
-  .gap-sm-13 {
-    --stack-gap: 3.25rem;
-  }
-  .gap-sm-14 {
-    --stack-gap: 3.5rem;
-  }
-  .gap-sm-15 {
-    --stack-gap: 3.75rem;
-  }
-  .gap-sm-16 {
-    --stack-gap: 4rem;
-  }
-  .gap-sm-17 {
-    --stack-gap: 4.25rem;
-  }
-  .gap-sm-18 {
-    --stack-gap: 4.5rem;
-  }
-  .gap-sm-19 {
-    --stack-gap: 4.75rem;
-  }
-  .gap-sm-20 {
-    --stack-gap: 5rem;
-  }
-  
-  .padding-sm-0 {
-    --stack-padding: 0;
-  }
-  .padding-sm-1 {
-    --stack-padding: 0.25rem;
-  }
-  .padding-sm-2 {
-    --stack-padding: 0.5rem;
-  }
-  .padding-sm-3 {
-    --stack-padding: 0.75rem;
-  }
-  .padding-sm-4 {
-    --stack-padding: 1rem;
-  }
-  .padding-sm-5 {
-    --stack-padding: 1.25rem;
-  }
-  .padding-sm-6 {
-    --stack-padding: 1.5rem;
-  }
-  .padding-sm-7 {
-    --stack-padding: 1.75rem;
-  }
-  .padding-sm-8 {
-    --stack-padding: 2rem;
-  }
-  .padding-sm-9 {
-    --stack-padding: 2.25rem;
-  }
-  .padding-sm-10 {
-    --stack-padding: 2.5rem;
-  }
-  .padding-sm-11 {
-    --stack-padding: 2.75rem;
-  }
-  .padding-sm-12 {
-    --stack-padding: 3rem;
-  }
-  .padding-sm-13 {
-    --stack-padding: 3.25rem;
-  }
-  .padding-sm-14 {
-    --stack-padding: 3.5rem;
-  }
-  .padding-sm-15 {
-    --stack-padding: 3.75rem;
-  }
-  .padding-sm-16 {
-    --stack-padding: 4rem;
-  }
-  .padding-sm-17 {
-    --stack-padding: 4.25rem;
-  }
-  .padding-sm-18 {
-    --stack-padding: 4.5rem;
-  }
-  .padding-sm-19 {
-    --stack-padding: 4.75rem;
-  }
-  .padding-sm-20 {
-    --stack-padding: 5rem;
-  }
-}
-
-/* medium */
-@media screen and (min-width: 601px) and (max-width: 960px) {
-  .direction-md-column {
-    --stack-direction: column;
-  }
-  .direction-md-column-reverse {
-    --stack-direction: column-reverse;
-  }
-  .direction-md-row {
-    --stack-direction: row;
-  }
-  .direction-md-row-reverse {
-    --stack-direction: row-reverse;
-  }
-  
-  .align-md-start {
-    --stack-align: flex-start;
-  }
-  .align-md-end {
-    --stack-align: flex-end;
-  }
-  .align-md-center {
-    --stack-align: center;
-  }
-  .align-md-baseline {
-    --stack-align: baseline;
-  }
-  .align-md-stretch {
-    --stack-align: stretch;
-  }
-  
-  .justify-md-normal {
-    --stack-justify: normal;
-  }
-  .justify-md-start {
-    --stack-justify: flex-start;
-  }
-  .justify-md-end {
-    --stack-justify: flex-end;
-  }
-  .justify-md-center {
-    --stack-justify: center;
-  }
-  .justify-md-between {
-    --stack-justify: space-between;
-  }
-  .justify-md-around {
-    --stack-justify: space-around;
-  }
-  .justify-md-evenly {
-    --stack-justify: space-evenly;
-  }
-  .justify-md-stretch {
-    --stack-justify: stretch;
-  }
-  
-  .flex-md-initial {
-    --stack-flex: initial;
-  }
-  .flex-md-1 {
-    --stack-flex: 1 1 0%;
-  }
-  .flex-md-auto {
-    --stack-flex: 1 1 auto;
-  }
-  .flex-md-none {
-    --stack-flex: none;
-  }
-  
-  .gap-md-0 {
-    --stack-gap: 0;
-  }
-  .gap-md-1 {
-    --stack-gap: 0.25rem;
-  }
-  .gap-md-2 {
-    --stack-gap: 0.5rem;
-  }
-  .gap-md-3 {
-    --stack-gap: 0.75rem;
-  }
-  .gap-md-4 {
-    --stack-gap: 1rem;
-  }
-  .gap-md-5 {
-    --stack-gap: 1.25rem;
-  }
-  .gap-md-6 {
-    --stack-gap: 1.5rem;
-  }
-  .gap-md-7 {
-    --stack-gap: 1.75rem;
-  }
-  .gap-md-8 {
-    --stack-gap: 2rem;
-  }
-  .gap-md-9 {
-    --stack-gap: 2.25rem;
-  }
-  .gap-md-10 {
-    --stack-gap: 2.5rem;
-  }
-  .gap-md-11 {
-    --stack-gap: 2.75rem;
-  }
-  .gap-md-12 {
-    --stack-gap: 3rem;
-  }
-  .gap-md-13 {
-    --stack-gap: 3.25rem;
-  }
-  .gap-md-14 {
-    --stack-gap: 3.5rem;
-  }
-  .gap-md-15 {
-    --stack-gap: 3.75rem;
-  }
-  .gap-md-16 {
-    --stack-gap: 4rem;
-  }
-  .gap-md-17 {
-    --stack-gap: 4.25rem;
-  }
-  .gap-md-18 {
-    --stack-gap: 4.5rem;
-  }
-  .gap-md-19 {
-    --stack-gap: 4.75rem;
-  }
-  .gap-md-20 {
-    --stack-gap: 5rem;
-  }
-  
-  .padding-md-0 {
-    --stack-padding: 0;
-  }
-  .padding-md-1 {
-    --stack-padding: 0.25rem;
-  }
-  .padding-md-2 {
-    --stack-padding: 0.5rem;
-  }
-  .padding-md-3 {
-    --stack-padding: 0.75rem;
-  }
-  .padding-md-4 {
-    --stack-padding: 1rem;
-  }
-  .padding-md-5 {
-    --stack-padding: 1.25rem;
-  }
-  .padding-md-6 {
-    --stack-padding: 1.5rem;
-  }
-  .padding-md-7 {
-    --stack-padding: 1.75rem;
-  }
-  .padding-md-8 {
-    --stack-padding: 2rem;
-  }
-  .padding-md-9 {
-    --stack-padding: 2.25rem;
-  }
-  .padding-md-10 {
-    --stack-padding: 2.5rem;
-  }
-  .padding-md-11 {
-    --stack-padding: 2.75rem;
-  }
-  .padding-md-12 {
-    --stack-padding: 3rem;
-  }
-  .padding-md-13 {
-    --stack-padding: 3.25rem;
-  }
-  .padding-md-14 {
-    --stack-padding: 3.5rem;
-  }
-  .padding-md-15 {
-    --stack-padding: 3.75rem;
-  }
-  .padding-md-16 {
-    --stack-padding: 4rem;
-  }
-  .padding-md-17 {
-    --stack-padding: 4.25rem;
-  }
-  .padding-md-18 {
-    --stack-padding: 4.5rem;
-  }
-  .padding-md-19 {
-    --stack-padding: 4.75rem;
-  }
-  .padding-md-20 {
-    --stack-padding: 5rem;
-  }
-}
-
-/* large */
-@media screen and (min-width: 961px) and (max-width: 1200px) {
-  .direction-lg-column {
-    --stack-direction: column;
-  }
-  .direction-lg-column-reverse {
-    --stack-direction: column-reverse;
-  }
-  .direction-lg-row {
-    --stack-direction: row;
-  }
-  .direction-lg-row-reverse {
-    --stack-direction: row-reverse;
-  }
-  
-  .align-lg-start {
-    --stack-align: flex-start;
-  }
-  .align-lg-end {
-    --stack-align: flex-end;
-  }
-  .align-lg-center {
-    --stack-align: center;
-  }
-  .align-lg-baseline {
-    --stack-align: baseline;
-  }
-  .align-lg-stretch {
-    --stack-align: stretch;
-  }
-  
-  .justify-lg-normal {
-    --stack-justify: normal;
-  }
-  .justify-lg-start {
-    --stack-justify: flex-start;
-  }
-  .justify-lg-end {
-    --stack-justify: flex-end;
-  }
-  .justify-lg-center {
-    --stack-justify: center;
-  }
-  .justify-lg-between {
-    --stack-justify: space-between;
-  }
-  .justify-lg-around {
-    --stack-justify: space-around;
-  }
-  .justify-lg-evenly {
-    --stack-justify: space-evenly;
-  }
-  .justify-lg-stretch {
-    --stack-justify: stretch;
-  }
-  
-  .flex-lg-initial {
-    --stack-flex: initial;
-  }
-  .flex-lg-1 {
-    --stack-flex: 1 1 0%;
-  }
-  .flex-lg-auto {
-    --stack-flex: 1 1 auto;
-  }
-  .flex-lg-none {
-    --stack-flex: none;
-  }
-  
-  .gap-lg-0 {
-    --stack-gap: 0;
-  }
-  .gap-lg-1 {
-    --stack-gap: 0.25rem;
-  }
-  .gap-lg-2 {
-    --stack-gap: 0.5rem;
-  }
-  .gap-lg-3 {
-    --stack-gap: 0.75rem;
-  }
-  .gap-lg-4 {
-    --stack-gap: 1rem;
-  }
-  .gap-lg-5 {
-    --stack-gap: 1.25rem;
-  }
-  .gap-lg-6 {
-    --stack-gap: 1.5rem;
-  }
-  .gap-lg-7 {
-    --stack-gap: 1.75rem;
-  }
-  .gap-lg-8 {
-    --stack-gap: 2rem;
-  }
-  .gap-lg-9 {
-    --stack-gap: 2.25rem;
-  }
-  .gap-lg-10 {
-    --stack-gap: 2.5rem;
-  }
-  .gap-lg-11 {
-    --stack-gap: 2.75rem;
-  }
-  .gap-lg-12 {
-    --stack-gap: 3rem;
-  }
-  .gap-lg-13 {
-    --stack-gap: 3.25rem;
-  }
-  .gap-lg-14 {
-    --stack-gap: 3.5rem;
-  }
-  .gap-lg-15 {
-    --stack-gap: 3.75rem;
-  }
-  .gap-lg-16 {
-    --stack-gap: 4rem;
-  }
-  .gap-lg-17 {
-    --stack-gap: 4.25rem;
-  }
-  .gap-lg-18 {
-    --stack-gap: 4.5rem;
-  }
-  .gap-lg-19 {
-    --stack-gap: 4.75rem;
-  }
-  .gap-lg-20 {
-    --stack-gap: 5rem;
-  }
-  
-  .padding-lg-0 {
-    --stack-padding: 0;
-  }
-  .padding-lg-1 {
-    --stack-padding: 0.25rem;
-  }
-  .padding-lg-2 {
-    --stack-padding: 0.5rem;
-  }
-  .padding-lg-3 {
-    --stack-padding: 0.75rem;
-  }
-  .padding-lg-4 {
-    --stack-padding: 1rem;
-  }
-  .padding-lg-5 {
-    --stack-padding: 1.25rem;
-  }
-  .padding-lg-6 {
-    --stack-padding: 1.5rem;
-  }
-  .padding-lg-7 {
-    --stack-padding: 1.75rem;
-  }
-  .padding-lg-8 {
-    --stack-padding: 2rem;
-  }
-  .padding-lg-9 {
-    --stack-padding: 2.25rem;
-  }
-  .padding-lg-10 {
-    --stack-padding: 2.5rem;
-  }
-  .padding-lg-11 {
-    --stack-padding: 2.75rem;
-  }
-  .padding-lg-12 {
-    --stack-padding: 3rem;
-  }
-  .padding-lg-13 {
-    --stack-padding: 3.25rem;
-  }
-  .padding-lg-14 {
-    --stack-padding: 3.5rem;
-  }
-  .padding-lg-15 {
-    --stack-padding: 3.75rem;
-  }
-  .padding-lg-16 {
-    --stack-padding: 4rem;
-  }
-  .padding-lg-17 {
-    --stack-padding: 4.25rem;
-  }
-  .padding-lg-18 {
-    --stack-padding: 4.5rem;
-  }
-  .padding-lg-19 {
-    --stack-padding: 4.75rem;
-  }
-  .padding-lg-20 {
-    --stack-padding: 5rem;
-  }
-}
-
-/* extra large */
 @media screen and (min-width: 1201px) {
-  .direction-xl-column {
-    --stack-direction: column;
+  .stack {
+      --stack-direction: var(--xl-stack-direction, var(--lg-stack-direction, var(--md-stack-direction, var(--sm-stack-direction))));
+      --stack-align: var(--xl-stack-align, var(--lg-stack-align, var(--md-stack-align, var(--sm-stack-align))));
+      --stack-justify: var(--xl-stack-justify, var(--lg-stack-justify, var(--md-stack-justify, var(--sm-stack-justify))));
+      --stack-padding: var(--xl-stack-padding, var(--lg-stack-padding, var(--md-stack-padding, var(--sm-stack-padding))));
+      --stack-gap: var(--xl-stack-gap, var(--lg-stack-gap, var(--md-stack-gap, var(--sm-stack-gap))));
   }
-  .direction-xl-column-reverse {
-    --stack-direction: column-reverse;
+}
+@media screen and (min-width: 961px) and (max-width: 1200px) {
+  .stack {
+      --stack-direction: var(--lg-stack-direction, var(--md-stack-direction, var(--sm-stack-direction)));
+      --stack-align: var(--lg-stack-align, var(--md-stack-align, var(--sm-stack-align)));
+      --stack-justify: var(--lg-stack-justify, var(--md-stack-justify, var(--sm-stack-justify)));
+      --stack-padding: var(--lg-stack-padding, var(--md-stack-padding, var(--sm-stack-padding)));
+      --stack-gap: var(--lg-stack-gap, var(--md-stack-gap, var(--sm-stack-gap)));
   }
-  .direction-xl-row {
-    --stack-direction: row;
+}
+@media screen and (min-width: 601px) and (max-width: 960px) {
+  .stack {
+      --stack-direction: var(--md-stack-direction, var(--sm-stack-direction));
+      --stack-align: var(--md-stack-align, var(--sm-stack-align));
+      --stack-justify: var(--md-stack-justify, var(--sm-stack-justify));
+      --stack-padding: var(--md-stack-padding, var(--sm-stack-padding));
+      --stack-gap: var(--md-stack-gap, var(--sm-stack-gap));
   }
-  .direction-xl-row-reverse {
-    --stack-direction: row-reverse;
+}
+@media screen and (max-width: 600px) {
+  .stack {
+      --stack-direction: var(--sm-stack-direction);
+      --stack-align: var(--sm-stack-align);
+      --stack-justify: var(--sm-stack-justify);
+      --stack-padding: var(--sm-stack-padding);
+      --stack-gap: var(--sm-stack-gap);
   }
-  
-  .align-xl-start {
-    --stack-align: flex-start;
-  }
-  .align-xl-end {
-    --stack-align: flex-end;
-  }
-  .align-xl-center {
-    --stack-align: center;
-  }
-  .align-xl-baseline {
-    --stack-align: baseline;
-  }
-  .align-xl-stretch {
-    --stack-align: stretch;
-  }
-  
-  .justify-xl-normal {
-    --stack-justify: normal;
-  }
-  .justify-xl-start {
-    --stack-justify: flex-start;
-  }
-  .justify-xl-end {
-    --stack-justify: flex-end;
-  }
-  .justify-xl-center {
-    --stack-justify: center;
-  }
-  .justify-xl-between {
-    --stack-justify: space-between;
-  }
-  .justify-xl-around {
-    --stack-justify: space-around;
-  }
-  .justify-xl-evenly {
-    --stack-justify: space-evenly;
-  }
-  .justify-xl-stretch {
-    --stack-justify: stretch;
-  }
-  
-  .flex-xl-initial {
-    --stack-flex: initial;
-  }
-  .flex-xl-1 {
-    --stack-flex: 1 1 0%;
-  }
-  .flex-xl-auto {
-    --stack-flex: 1 1 auto;
-  }
-  .flex-xl-none {
-    --stack-flex: none;
-  }
-  
-  .gap-xl-0 {
-    --stack-gap: 0;
-  }
-  .gap-xl-1 {
-    --stack-gap: 0.25rem;
-  }
-  .gap-xl-2 {
-    --stack-gap: 0.5rem;
-  }
-  .gap-xl-3 {
-    --stack-gap: 0.75rem;
-  }
-  .gap-xl-4 {
-    --stack-gap: 1rem;
-  }
-  .gap-xl-5 {
-    --stack-gap: 1.25rem;
-  }
-  .gap-xl-6 {
-    --stack-gap: 1.5rem;
-  }
-  .gap-xl-7 {
-    --stack-gap: 1.75rem;
-  }
-  .gap-xl-8 {
-    --stack-gap: 2rem;
-  }
-  .gap-xl-9 {
-    --stack-gap: 2.25rem;
-  }
-  .gap-xl-10 {
-    --stack-gap: 2.5rem;
-  }
-  .gap-xl-11 {
-    --stack-gap: 2.75rem;
-  }
-  .gap-xl-12 {
-    --stack-gap: 3rem;
-  }
-  .gap-xl-13 {
-    --stack-gap: 3.25rem;
-  }
-  .gap-xl-14 {
-    --stack-gap: 3.5rem;
-  }
-  .gap-xl-15 {
-    --stack-gap: 3.75rem;
-  }
-  .gap-xl-16 {
-    --stack-gap: 4rem;
-  }
-  .gap-xl-17 {
-    --stack-gap: 4.25rem;
-  }
-  .gap-xl-18 {
-    --stack-gap: 4.5rem;
-  }
-  .gap-xl-19 {
-    --stack-gap: 4.75rem;
-  }
-  .gap-xl-20 {
-    --stack-gap: 5rem;
-  }
-  
-  .padding-xl-0 {
-    --stack-padding: 0;
-  }
-  .padding-xl-1 {
-    --stack-padding: 0.25rem;
-  }
-  .padding-xl-2 {
-    --stack-padding: 0.5rem;
-  }
-  .padding-xl-3 {
-    --stack-padding: 0.75rem;
-  }
-  .padding-xl-4 {
-    --stack-padding: 1rem;
-  }
-  .padding-xl-5 {
-    --stack-padding: 1.25rem;
-  }
-  .padding-xl-6 {
-    --stack-padding: 1.5rem;
-  }
-  .padding-xl-7 {
-    --stack-padding: 1.75rem;
-  }
-  .padding-xl-8 {
-    --stack-padding: 2rem;
-  }
-  .padding-xl-9 {
-    --stack-padding: 2.25rem;
-  }
-  .padding-xl-10 {
-    --stack-padding: 2.5rem;
-  }
-  .padding-xl-11 {
-    --stack-padding: 2.75rem;
-  }
-  .padding-xl-12 {
-    --stack-padding: 3rem;
-  }
-  .padding-xl-13 {
-    --stack-padding: 3.25rem;
-  }
-  .padding-xl-14 {
-    --stack-padding: 3.5rem;
-  }
-  .padding-xl-15 {
-    --stack-padding: 3.75rem;
-  }
-  .padding-xl-16 {
-    --stack-padding: 4rem;
-  }
-  .padding-xl-17 {
-    --stack-padding: 4.25rem;
-  }
-  .padding-xl-18 {
-    --stack-padding: 4.5rem;
-  }
-  .padding-xl-19 {
-    --stack-padding: 4.75rem;
-  }
-  .padding-xl-20 {
-    --stack-padding: 5rem;
+}
+@media screen and (max-width: 600px) {
+  .stack {
+      --stack-direction: var(--sm-stack-direction);
+      --stack-align: var(--sm-stack-align);
+      --stack-justify: var(--sm-stack-justify);
+      --stack-padding: var(--sm-stack-padding);
+      --stack-gap: var(--sm-stack-gap);
   }
 }
