--- a/src/components/ui/Text/Text.module.css
+++ b/src/components/ui/Text/Text.module.css
@@ -1,50 +1,41 @@
-.size--10 {
-  font-size: 0.625rem;
-  line-height: 0.75rem;
-  letter-spacing: initial;
-  font-weight: 400;
+.textWrapper {
+  --text-size: 0.875rem;
+  --text-weight: 400;
+  --text-line-height: 1.25rem;
+  font-family: var(--font-sans, var(--font-sans-fallback));
+  margin: 0;
+  color: var(--text-color);
+  font-size: var(--text-size);
+  letter-spacing: var(--text-letter-spacing, inherit);
+  font-weight: var(--text-weight);
+  line-height: var(--text-line-height);
+  text-transform: var(--text-transform, inherit);
+  text-align: var(--text-align, inherit);
 }
-.size--12 {
-  font-size: 0.75rem;
-  line-height: 1rem;
-  letter-spacing: initial;
-  font-weight: 400;
+
+@media screen and (min-width: 0px) {
+  .textWrapper {
+      --text-size: var(--sm-text-size);
+      --text-weight: var(--sm-text-weight);
+      --text-line-height: var(--sm-text-line-height);
+      --text-letter-spacing: var(--sm-text-letter-spacing);
+  }
 }
-.size--14 {
-  font-size: 0.875rem;
-  line-height: 1.25rem;
-  letter-spacing: initial;
-  font-weight: 400;
+@media screen and (min-width: 601px) {
+  .textWrapper {
+      --text-size: var(--md-text-size);
+      --text-weight: var(--md-text-weight);
+      --text-line-height: var(--md-text-line-height);
+      --text-letter-spacing: var(--md-text-letter-spacing);
+  }
 }
-.size--16 {
-  font-size: 1rem;
-  line-height: 1.5rem;
-  letter-spacing: initial;
-  font-weight: 400;
-}
-.size--20 {
-  font-size: 1.25rem;
-  line-height: 1.5rem;
-  letter-spacing: -0.020625rem;
-  font-weight: 600;
-}
-.size--24 {
-  font-size: 1.5rem;
-  line-height: 2rem;
-  letter-spacing: -0.029375rem;
-  font-weight: 600;
-}
-.size--32 {
-  font-size: 2rem;
-  line-height: 2.5rem;
-  letter-spacing: -0.049375rem;
-  font-weight: 600;
-}
-.size--48 {
-  font-size: 3rem;
-  line-height: 3.5rem;
-  letter-spacing: -0.066875rem;
-  font-weight: 700;
+@media screen and (min-width: 961px) {
+    .textWrapper {
+        --text-size: var(--lg-text-size);
+        --text-weight: var(--lg-text-weight);
+        --text-line-height: var(--lg-text-line-height);
+        --text-letter-spacing: var(--lg-text-letter-spacing);
+    }
 }
 
 .variant--copy-13 {
@@ -227,55 +218,6 @@
 }
 
 @media (min-width: 0px) {
-  .size--sm-10 {
-    font-size: 0.625rem;
-    line-height: 0.75rem;
-    letter-spacing: initial;
-    font-weight: 400;
-  }
-  .size--sm-12 {
-    font-size: 0.75rem;
-    line-height: 1rem;
-    letter-spacing: initial;
-    font-weight: 400;
-  }
-  .size--sm-14 {
-    font-size: 0.875rem;
-    line-height: 1.25rem;
-    letter-spacing: initial;
-    font-weight: 400;
-  }
-  .size--sm-16 {
-    font-size: 1rem;
-    line-height: 1.5rem;
-    letter-spacing: initial;
-    font-weight: 400;
-  }
-  .size--sm-20 {
-    font-size: 1.25rem;
-    line-height: 1.5rem;
-    letter-spacing: -0.020625rem;
-    font-weight: 600;
-  }
-  .size--sm-24 {
-    font-size: 1.5rem;
-    line-height: 2rem;
-    letter-spacing: -0.029375rem;
-    font-weight: 600;
-  }
-  .size--sm-32 {
-    font-size: 2rem;
-    line-height: 2.5rem;
-    letter-spacing: -0.049375rem;
-    font-weight: 600;
-  }
-  .size--sm-48 {
-    font-size: 3rem;
-    line-height: 3.5rem;
-    letter-spacing: -0.066875rem;
-    font-weight: 700;
-  }
-
   .variant--sm-copy-13 {
     font-size: 0.8125rem;
     line-height: 1.125rem;
@@ -423,55 +365,6 @@
 }
 
 @media (min-width: 601px) {
-  .size--md-10 {
-    font-size: 0.625rem;
-    line-height: 0.75rem;
-    letter-spacing: initial;
-    font-weight: 400;
-  }
-  .size--md-12 {
-    font-size: 0.75rem;
-    line-height: 1rem;
-    letter-spacing: initial;
-    font-weight: 400;
-  }
-  .size--md-14 {
-    font-size: 0.875rem;
-    line-height: 1.25rem;
-    letter-spacing: initial;
-    font-weight: 400;
-  }
-  .size--md-16 {
-    font-size: 1rem;
-    line-height: 1.5rem;
-    letter-spacing: initial;
-    font-weight: 400;
-  }
-  .size--md-20 {
-    font-size: 1.25rem;
-    line-height: 1.5rem;
-    letter-spacing: -0.020625rem;
-    font-weight: 600;
-  }
-  .size--md-24 {
-    font-size: 1.5rem;
-    line-height: 2rem;
-    letter-spacing: -0.029375rem;
-    font-weight: 600;
-  }
-  .size--md-32 {
-    font-size: 2rem;
-    line-height: 2.5rem;
-    letter-spacing: -0.049375rem;
-    font-weight: 600;
-  }
-  .size--md-48 {
-    font-size: 3rem;
-    line-height: 3.5rem;
-    letter-spacing: -0.066875rem;
-    font-weight: 700;
-  }
-
   .variant--md-copy-13 {
     font-size: 0.8125rem;
     line-height: 1.125rem;
@@ -619,55 +512,6 @@
 }
 
 @media (min-width: 961px) {
-  .size--lg-10 {
-    font-size: 0.625rem;
-    line-height: 0.75rem;
-    letter-spacing: initial;
-    font-weight: 400;
-  }
-  .size--lg-12 {
-    font-size: 0.75rem;
-    line-height: 1rem;
-    letter-spacing: initial;
-    font-weight: 400;
-  }
-  .size--lg-14 {
-    font-size: 0.875rem;
-    line-height: 1.25rem;
-    letter-spacing: initial;
-    font-weight: 400;
-  }
-  .size--lg-16 {
-    font-size: 1rem;
-    line-height: 1.5rem;
-    letter-spacing: initial;
-    font-weight: 400;
-  }
-  .size--lg-20 {
-    font-size: 1.25rem;
-    line-height: 1.5rem;
-    letter-spacing: -0.020625rem;
-    font-weight: 600;
-  }
-  .size--lg-24 {
-    font-size: 1.5rem;
-    line-height: 2rem;
-    letter-spacing: -0.029375rem;
-    font-weight: 600;
-  }
-  .size--lg-32 {
-    font-size: 2rem;
-    line-height: 2.5rem;
-    letter-spacing: -0.049375rem;
-    font-weight: 600;
-  }
-  .size--lg-48 {
-    font-size: 3rem;
-    line-height: 3.5rem;
-    letter-spacing: -0.066875rem;
-    font-weight: 700;
-  }
-
   .variant--lg-copy-13 {
     font-size: 0.8125rem;
     line-height: 1.125rem;
