feat - home page

--- a/src/components/ui/Grid/Grid.module.css
+++ b/src/components/ui/Grid/Grid.module.css
@@ -15,6 +15,10 @@
   --horizontal-margin: 0px;
   --grid-system-width: calc(100cqw);
 }
+.gridSystemLazyContent {
+  contain: layout;
+  overflow: visible;
+}
 
 .gridSystem {
   --light-dashed-png: url("data:image/png;base64,iVBORw0KGgoAAAANSUhEUgAAAA8AAAAPCAYAAAA71pVKAAAACXBIWXMAAAsTAAALEwEAmpwYAAAANklEQVQokWN8/fr1fwY0ICoqyoguhk0dE7oAKYARZiI223ABmB6KbKZI8yggEQzReGYcsIwBALk3HxGhdtdwAAAAAElFTkSuQmCC");
