--- a/src/components/ui/Button/Button.module.css
+++ b/src/components/ui/Button/Button.module.css
@@ -95,6 +95,28 @@
   border-radius: 100px;
 }
 
+@media screen and (min-width: 0px) {
+  .responsive {
+      --x-padding: var(--sm-x-padding);
+      --height: var(--sm-height);
+      font-size: 14px;
+  }
+}
+@media screen and (min-width: 601px) {
+  .responsive {
+      --x-padding: var(--md-x-padding);
+      --height: var(--md-height);
+      font-size: 14px;
+  }
+}
+@media screen and (min-width: 961px) {
+  .responsive {
+      --x-padding: var(--lg-x-padding);
+      --height: var(--lg-height);
+      font-size: 16px;
+  }
+}
+
 /* types or variants of button */
 .secondary[data-button] {
   --themed-bg: var(--ds-background-100);
