--- a/src/styles/globals.css
+++ b/src/styles/globals.css
@@ -6,6 +6,29 @@
 @tailwind components;
 @tailwind utilities;
 
+@layer base {
+  html {
+    touch-action: manipulation;
+    font-feature-settings: "rlig" 1, "calt" 0;
+    text-rendering: optimizeLegibility;
+    -webkit-font-smoothing: antialiased;
+    -moz-osx-font-smoothing: grayscale;
+    font-synthesis: none;
+  }
+  
+  @supports (font-synthesis-weight:none) {
+    html {
+        font-synthesis: initial;
+        font-synthesis-weight: none;
+    }
+  }
+
+  html {
+    --banner-height: 0px;
+    --vh100-offset: calc(var(--header-height) + var(--banner-height));
+  }
+}
+
 @layer utilities {
   :root {
     --font-sans: "Geist","Geist Fallback",Arial,Apple Color Emoji,Segoe UI Emoji,Segoe UI Symbol;
