--- a/src/components/ui/Link/Link.module.css
+++ b/src/components/ui/Link/Link.module.css
@@ -9,3 +9,9 @@
   cursor: pointer;
   outline: none;
 }
+
+.link:focus-visible,
+.link[data-focus-visible-added] {
+  outline: var(--ds-focus-color) auto 2px;
+  outline-offset: 4px;
+}
